
* LUCENE-10494: Implement method to bulk add all collection elements to a PriorityQueue.
  (Bauyrzhan Sakhariyev)

* LUCENE-10484: Add support for concurrent random sampling by calling
  RandomSamplingFacetsCollector#createManager. (Luca Cavanna)

* LUCENE-10467: Throws IllegalArgumentException for Facets#getAllDims and Facets#getTopChildren
  if topN <= 0. (Yuting Gan)

Optimizations
---------------------

* LUCENE-10452: Hunspell: call checkCanceled less frequently to reduce the overhead (Peter Gromov)

* LUCENE-10451: Hunspell: don't perform potentially expensive spellchecking after timeout (Peter Gromov)

* LUCENE-10418: More `Query#rewrite` optimizations for the non-scoring case.
  (Adrien Grand)

* LUCENE-10436: Deprecate DocValuesFieldExistsQuery, NormsFieldExistsQuery and KnnVectorFieldExistsQuery
  with FieldExistsQuery. (Zach Chen, Michael McCandless, Adrien Grand)

* LUCENE-10481: FacetsCollector will not request scores if it does not use them. (Mike Drob)

* LUCENE-10503: Potential speedup for pure disjunctions whose clauses produce
  scores that are very close to each other. (Adrien Grand)

* LUCENE-10315: Use SIMD instructions to decode BKD doc IDs. (Guo Feng, Adrien Grand, Ignacio Vera)

* LUCENE-8836: Speed up calls to TermsEnum#lookupOrd on doc values terms enums
  and sequences of increasing ords. (Bruno Roustant, Adrien Grand)

* LUCENE-10542: FieldSource exists implementations can avoid value retrieval (Kevin Risden)

* LUCENE-10534: MinFloatFunction / MaxFloatFunction exists check can be slow (Kevin Risden)

Bug Fixes
---------------------
* LUCENE-10477: Highlighter: WeightedSpanTermExtractor.extractWeightedSpanTerms to Query#rewrite
  multiple times if necessary. (Christine Poerschke, Adrien Grand)

* LUCENE-10491: A correctness bug in the way scores are provided within TaxonomyFacetSumValueSource
  was fixed. (Michael McCandless, Greg Miller)

* LUCENE-10466: Ensure IndexSortSortedNumericDocValuesRangeQuery handles sort field