@@ -46,6 +46,9 @@ Improvements
 * LUCENE-10467: Throws IllegalArgumentException for Facets#getAllDims and Facets#getTopChildren
   if topN <= 0. (Yuting Gan)
 
+* LUCENE-9848: Correctly sort HNSW graph neighbors when applying diversity criterion (Mayya
+  Sharipova, Michael Sokolov)
+
 Optimizations
 ---------------------
 
